--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Edification - Responsive Education HTML5 Template</title>
+    <title>The Admissions Hub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/png" href="assets/images/icon/favicon.ico">
@@ -42,7 +42,7 @@
                     <div class="col-sm-8">
                         <div class="ht-address">
                             <ul>
-                                <li><i class="fa fa-phone"></i>+ 88 01916 444137</li>
+                                <li><i class="fa fa-phone"></i>+ 1321-65478
                                 <li><i class="fa fa-envelope"></i>info@example.com</li>
                             </ul>
                         </div>
